swagger work done 1.0
